--- a/ui/public/locales/de/translation.json
+++ b/ui/public/locales/de/translation.json
@@ -87,8 +87,8 @@
             "RESULT": "{{guesserName}} hat geraten",
             "RESULT_CORRECT": "{{guesserName}} lag richtig!",
             "RESULT_WRONG": "{{guesserName}} lag falsch!",
-            "PREV_RESULT_CORRECT": "{{word}} zählt trotzdem!",
-            "PREV_RESULT_WRONG": "{{word}} zählt nicht!",
+            "PREV_RESULT_CORRECT": "\"{{word}}\" zählt trotzdem!",
+            "PREV_RESULT_WRONG": "\"{{word}}\" zählt nicht!",
             "YOUR_TURN": "$t(COMMON.YOUR_TURN)",
             "YOUR_TURN_HINT_WRITING": "$t(COMMON.YOUR_TURN) Gib einen Hinweis ein.",
             "YOUR_TURN_HINT_COMPARING": "$t(COMMON.YOUR_TURN) Markiere ungültige Hinweise.",
@@ -106,5 +106,10 @@
         "HEADING": "Sprache",
         "DE": "Deutsch",
         "EN": "English"
+    },
+    "ERROR": {
+        "NO_CONNECTION": "Keine Verbindung!",
+        "LOAD_GAMES": "$t(ERROR.NO_CONNECTION)",
+        "CREATE_GAME": "$t(ERROR.NO_CONNECTION)"
     }
 }
