--- a/ui/public/locales/en/translation.json
+++ b/ui/public/locales/en/translation.json
@@ -2,6 +2,7 @@
     "APP_TITLE": "Only one word!",
     "COMMON": {
         "TEAMMATES": "teammates",
+        "TEAMMATE": "teammate",
         "ME": "Me",
         "UNDO": "Undo",
         "YOUR_TURN": "Your turn!",
@@ -24,14 +25,17 @@
     "GAME": {
         "COMMON": {
             "WORD": "Word",
-            "PLAYER_HINTS": "Player hints",
-            "ENTER_HINT": "Enter a hint",
+            "HINT": "hint",
+            "HINTS": "hints",
+            "PLAYER_HINTS": "Player $t(GAME.COMMON.HINTS)",
+            "ENTER_HINT": "Enter a $t(GAME.COMMON.HINT)",
             "TURN_GUESSING": "{{guesser}}'s turn to guess",
             "TURN_GUESSING_ME": "My turn to guess",
             "GUESS": "Guess",
             "GUESS_SPEC": "$t(GAME.COMMON.GUESS): {{guess}}",
             "CURRENT_GUESS": "{{guesserName}}'s guess: {{guess}}",
-            "CURRENT_GUESS_ME": "My guess: {{guess}}"
+            "CURRENT_GUESS_ME": "My guess: {{guess}}",
+            "ROUND_HOST": "game master"
         },
         "LOBBY": {
             "ROUND_SELECT": {
@@ -70,14 +74,14 @@
             "RIGHT": "Correct: {{rightCount}}",
             "WRONG": "Wrong: {{wrongCount}}",
             "PHASE": "Phase",
-            "PHASE_WRITING": "{{ playersString }} are writing down hints...",
-            "PHASE_COMPARING": "{{ roundHostName }} is checking the hints for duplicate or invalid words...",
+            "PHASE_WRITING": "{{ playersString }} are writing down $t(GAME.COMMON.HINTS)...",
+            "PHASE_COMPARING": "{{ roundHostName }} is checking the $t(GAME.COMMON.HINTS) for duplicate or invalid words...",
             "PHASE_GUESSING": "{{ guesserName }} is trying to guess the word...",
             "PHASE_SOLUTION": "{{ guesserName }} was right!",
             "PHASE_SOLUTION_WRONG": " {{ guesserName }} wrong! {{ roundHostName }} is deciding if it still counts..."
         },
         "COMPARING": {
-            "INFO": "Use the smiley buttons on the hints to mark duplicate or invalid hints",
+            "INFO": "Use the smiley buttons on the $t(GAME.COMMON.HINTS) to mark duplicate or invalid $t(GAME.COMMON.HINTS)",
             "BUTTON": "{{guesserName}} can start guessing!"
         },
         "SOLUTION": {
@@ -87,7 +91,8 @@
         },
         "END": {
             "RIGHT": "Correct ({{count}})",
-            "WRONG": "Wrong ({{count}})"
+            "WRONG": "Wrong ({{count}})",
+            "BACK_HOME": "Back to game list"
         },
         "MESSAGE": {
             "RESULT": "{{guesserName}} guessed",
@@ -96,8 +101,8 @@
             "PREV_RESULT_CORRECT": "\"{{word}}\" counts anyway!",
             "PREV_RESULT_WRONG": "\"{{word}}\" doesn't count!",
             "YOUR_TURN": "$t(COMMON.YOUR_TURN)",
-            "YOUR_TURN_HINT_WRITING": "$t(COMMON.YOUR_TURN) Enter a hint.",
-            "YOUR_TURN_HINT_COMPARING": "$t(COMMON.YOUR_TURN) Mark invalid hints",
+            "YOUR_TURN_HINT_WRITING": "$t(COMMON.YOUR_TURN) Enter a $t(GAME.COMMON.HINT).",
+            "YOUR_TURN_HINT_COMPARING": "$t(COMMON.YOUR_TURN) Mark invalid $t(GAME.COMMON.HINTS)",
             "YOUR_TURN_GUESSING": "$t(COMMON.YOUR_TURN) Try to guess the word.",
             "YOUR_TURN_SOLUTION": "$t(COMMON.YOUR_TURN) Decide if it counts anyway."
         }
@@ -114,12 +119,58 @@
         "EN": "English"
     },
     "TUTORIAL": {
+        "CONTINUE": "Continue tutorial",
+        "RESTART": "Restart tutorial",
+        "CLOSE": "Finish tutorial",
         "CONTROLS": {
             "BACK": "Back",
             "CLOSE": "Close",
             "DONE": "Done",
             "NEXT": "Next",
             "SKIP": "Skip"
+        },
+        "LOBBY": {
+            "WELCOME": "Welcome to $t(APP_TITLE)",
+            "NAME": "The first step is easy: enter your name",
+            "COLOR": "Then choose a pen color",
+            "JOIN": "Then you are ready to join the game",
+            "TEAMMATES": "$t(APP_TITLE) is a cooperative multiplayer game. Here you can find your $t(COMMON.TEAMMATES).",
+            "WELCOME_NAME": "Hello {{name}}, nice to meet you!",
+            "START_TITLE": "Start the game",
+            "START": "When everyone has joined you can start the game. You need at least 3 players. 4 - 7 players are recommended."
+        },
+        "PREPARATION": {
+            "WELCOME": "Game preparation",
+            "WORD": "$t(APP_TITLE) is all about words. In the beginning everyone enters a word, which another $t(COMMON.TEAMMATE) has to guess later in the game based on some clues. Let's assume, you chose the word {{word}}.",
+            "SUBMIT": "Submit your word once you are ready"
+        },
+        "GAME": {
+            "ENTER_HINT": {
+                "TITLE1": "$t(APP_TITLE) is all about words",
+                "1": "Enter one word which might help your $t(COMMON.TEAMMATE) to guess the current word \"{{ word }}\".",
+                "TITLE2": "Let's start the second round",
+                "2": "Enter a new $t(GAME.COMMON.HINT) to help {{player}} to guess \"{{ word }}\".",
+                "TITLE3": "Let's start another round",
+                "3": "Enter another $t(GAME.COMMON.HINT) to help {{player}} to guess \"{{ word }}\"."
+            },
+            "DUPLICATE_INFO_TITLE": "Oh no! Two $t(COMMON.TEAMMATES) gave the same $t(GAME.COMMON.HINT).",
+            "DUPLICATE_INFO": "This means both $t(GAME.COMMON.HINTS) will be removed. Be careful to give a $t(GAME.COMMON.HINT) that's helpful but not too obvious, another $t(COMMON.TEAMMATE) might have the same idea.",
+            "TOGGLE_INFO_TITLE": "In this round you are the $t(GAME.COMMON.ROUND_HOST)",
+            "TOGGLE_INFO": "In each round one player becomes the $t(GAME.COMMON.ROUND_HOST) who has the task to check all the given $t(GAME.COMMON.HINTS) for invalid hints that have not been recognized automatically, e.g. duplicates with typos or $t(GAME.COMMON.HINTS) including parts of the word to guess.",
+            "TOGGLE_BTN": "Use this button at each $t(GAME.COMMON.HINT) to toggle them between visible and removed",
+            "START_GUESSING": "Once you are done checking, you can unlock the hints so that your $t(COMMON.TEAMMATE) can start guessing",
+            "SOLUTION": {
+                "CONTINUE": "Great! {{player}} guessed correctly. Let's continue!",
+                "WRONG": "Bummer! {{player}} guessed wrong.",
+                "WRONG_CONTINUE": "Click here to continue the tutorial",
+                "INFO": "When the guess doesn't match the original word the current $t(GAME.COMMON.ROUND_HOST) has the task to check the result and is able to count this round as successful anyway, e.g. if the guess was really close or there was only a typo.",
+                "COUNT_WRONG": "If you still think it's wrong, press this button.",
+                "COUNT_CORRECT": "If you think it's correct, then press here."
+            },
+            "GUESS_TITLE": "$t(COMMON.YOUR_TURN)",
+            "GUESS": "Check the $t(GAME.COMMON.HINTS) your $t(COMMON.TEAMMATES) provided and try to guess the word.",
+            "END_INFO_TITLE": "And that's it. Thank you for playing!",
+            "END_INFO": "At the end of each game you will find an overview of all the rounds."
         }
     },
     "ERROR": {
