--- a/ui/public/locales/en/translation.json
+++ b/ui/public/locales/en/translation.json
@@ -189,5 +189,10 @@
         "NO_CONNECTION": "No connection!",
         "LOAD_GAMES": "$t(ERROR.NO_CONNECTION)",
         "CREATE_GAME": "$t(ERROR.NO_CONNECTION)"
+    },
+    "CONNECTION": {
+        "CONNECTED": "Connected",
+        "DISCONNECTED": "Disconnected",
+        "CONNECTING": "Connecting..."
     }
 }
