--- a/ui/public/locales/en/translation.json
+++ b/ui/public/locales/en/translation.json
@@ -40,7 +40,10 @@
             "GUESS_SPEC": "$t(GAME.COMMON.GUESS): {{guess}}",
             "CURRENT_GUESS": "{{guesserName}}'s guess: {{guess}}",
             "CURRENT_GUESS_ME": "My guess: {{guess}}",
-            "ROUND_HOST": "game master"
+            "ROUND_HOST": "game master",
+            "TIME": "Game time: {{time}}",
+            "END_PHASE": "Continue game without action from {{ playerList }}",
+            "END_PHASE_CONFIRM": "You are the game host and you can end this phase earlier, e.g. in case a $t(COMMON.TEAMMATE) lost the connection.\n\nAre you sure you want to proceed to the next phase?"
         },
         "LOBBY": {
             "ROUND_SELECT": {
@@ -97,8 +100,8 @@
             "CONTINUE_RIGHT": "As good as correct"
         },
         "END": {
-            "RIGHT": "Correct ({{count}})",
-            "WRONG": "Wrong ({{count}})",
+            "RIGHT": "Correct ({{count}}/{{total}})",
+            "WRONG": "Wrong ({{count}}/{{total}})",
             "BACK_HOME": "Back to game list"
         },
         "MESSAGE": {
