--- a/ui/public/locales/de/translation.json
+++ b/ui/public/locales/de/translation.json
@@ -85,6 +85,7 @@
             "WRONG": "Falsche: {{wrongCount}}",
             "PHASE": "Phase",
             "PHASE_WRITING": "{{ playersString }} schreiben $t(GAME.COMMON.HINTS) auf...",
+            "PHASE_WRITING_TWO_PLAYER": "{{ playersString }} schreibt $t(GAME.COMMON.HINTS) auf...",
             "PHASE_COMPARING": "{{ roundHostName }} überprüft die $t(GAME.COMMON.HINTS) auf ungültige oder doppelte Wörter...",
             "PHASE_GUESSING": "{{ guesserName }} versucht den $t(GAME.COMMON.WORD) zu erraten...",
             "PHASE_SOLUTION": "{{ guesserName }} lag genau richtig!",
