Play again button in end view

--- a/ui/public/locales/de/translation.json
+++ b/ui/public/locales/de/translation.json
@@ -27,6 +27,7 @@
         "START_TUTORIAL": "Wie funktioniert's?"
     },
     "GAME": {
+        "AGAIN": "Nochmal!",
         "BACK_HOME": "Zurück zur Spielliste",
         "COMMON": {
             "WORD": "Begriff",
