--- a/ui/public/locales/en/translation.json
+++ b/ui/public/locales/en/translation.json
@@ -27,6 +27,7 @@
         "START_TUTORIAL": "How to play"
     },
     "GAME": {
+        "AGAIN": "Again!",
         "BACK_HOME": "Back to game list",
         "COMMON": {
             "WORD": "Word",
