--- a/ui/public/locales/de/translation.json
+++ b/ui/public/locales/de/translation.json
@@ -29,6 +29,10 @@
     "GAME": {
         "AGAIN": "Nochmal!",
         "BACK_HOME": "Zurück zur Spielliste",
+        "JOIN": "Spiel beitreten",
+        "REQUESTED_JOIN": "Spielteilnahme angefragt",
+        "REQUEST_TAKEOVER": "Spieler übernehmen",
+        "TAKE_OVER_REQUESTS": "Spielerübernahme-Anfragen",
         "COMMON": {
             "WORD": "Begriff",
             "HINT": "Hinweis",
@@ -112,6 +116,8 @@
             "RESULT_WRONG": "{{guesserName}}s Rateversuch: \"{{guess}}\"",
             "PREV_RESULT_CORRECT": "\"{{word}}\" zählt trotzdem!",
             "PREV_RESULT_WRONG": "\"{{word}}\" zählt nicht!",
+            "TAKE_OVER_REQUEST_ACCEPTED": "Beitrittsanfrage akzeptiert",
+            "TAKE_OVER_REQUEST_DENIED": "Beitrittsanfrage abgelehnt",
             "YOUR_TURN": "$t(COMMON.YOUR_TURN)",
             "YOUR_TURN_HINT_WRITING": "$t(COMMON.YOUR_TURN) Gib einen $t(GAME.COMMON.HINT) ein.",
             "YOUR_TURN_HINT_COMPARING": "$t(COMMON.YOUR_TURN) Markiere ungültige $t(GAME.COMMON.HINTS).",
