--- a/ui/public/locales/en/translation.json
+++ b/ui/public/locales/en/translation.json
@@ -29,6 +29,10 @@
     "GAME": {
         "AGAIN": "Again!",
         "BACK_HOME": "Back to game list",
+        "JOIN": "Join game",
+        "REQUESTED_JOIN": "Requested to join",
+        "REQUEST_TAKEOVER": "Take over player",
+        "TAKE_OVER_REQUESTS": "Player takeover requests",
         "COMMON": {
             "WORD": "Word",
             "HINT": "hint",
@@ -112,6 +116,8 @@
             "RESULT_WRONG": "{{guesserName}}'s guess: \"{{guess}}\"",
             "PREV_RESULT_CORRECT": "\"{{word}}\" counts anyway!",
             "PREV_RESULT_WRONG": "\"{{word}}\" doesn't count!",
+            "TAKE_OVER_REQUEST_ACCEPTED": "Joining request accepted",
+            "TAKE_OVER_REQUEST_DENIED": "Joining request denied",
             "YOUR_TURN": "$t(COMMON.YOUR_TURN)",
             "YOUR_TURN_HINT_WRITING": "$t(COMMON.YOUR_TURN) Enter a $t(GAME.COMMON.HINT).",
             "YOUR_TURN_HINT_COMPARING": "$t(COMMON.YOUR_TURN) Mark invalid $t(GAME.COMMON.HINTS)",
