--- a/ui/public/locales/en/translation.json
+++ b/ui/public/locales/en/translation.json
@@ -29,10 +29,6 @@
     "GAME": {
         "AGAIN": "Again!",
         "BACK_HOME": "Back to game list",
-        "JOIN": "Join game",
-        "REQUESTED_JOIN": "Requested to join",
-        "REQUEST_TAKEOVER": "Take over player",
-        "TAKE_OVER_REQUESTS": "Player takeover requests",
         "COMMON": {
             "WORD": "Word",
             "HINT": "hint",
@@ -110,14 +106,25 @@
             "WRONG": "Wrong ({{count}}/{{total}})",
             "BACK_HOME": "Back to game list"
         },
+        "JOINING": {
+            "JOIN": "Join game",
+            "REQUESTED_JOIN": "Requested to join",
+            "REQUEST_TAKEOVER": "Take over player",
+            "REQUESTS": "Joining requests",
+            "TAKEOVER_REQUEST": "{{newPlayerName}} wants to take over {{oldPlayerName}}",
+            "ACCEPTED": "accepted",
+            "DENIED": "denied",
+            "OPEN": "click to accept"
+        },
         "MESSAGE": {
             "RESULT": "{{guesserName}} guessed",
             "RESULT_CORRECT": "{{guesserName}} guessed correctly",
             "RESULT_WRONG": "{{guesserName}}'s guess: \"{{guess}}\"",
             "PREV_RESULT_CORRECT": "\"{{word}}\" counts anyway!",
             "PREV_RESULT_WRONG": "\"{{word}}\" doesn't count!",
-            "TAKE_OVER_REQUEST_ACCEPTED": "Joining request accepted",
-            "TAKE_OVER_REQUEST_DENIED": "Joining request denied",
+            "JOINING_REQUEST_ACCEPTED": "Joining request accepted",
+            "JOINING_REQUEST_DENIED": "Joining request denied",
+            "NEW_JOINING_REQUEST": "New joining request",
             "YOUR_TURN": "$t(COMMON.YOUR_TURN)",
             "YOUR_TURN_HINT_WRITING": "$t(COMMON.YOUR_TURN) Enter a $t(GAME.COMMON.HINT).",
             "YOUR_TURN_HINT_COMPARING": "$t(COMMON.YOUR_TURN) Mark invalid $t(GAME.COMMON.HINTS)",
