--- a/ui/public/locales/en/translation.json
+++ b/ui/public/locales/en/translation.json
@@ -85,12 +85,13 @@
             "RIGHT": "Correct: {{rightCount}}",
             "WRONG": "Wrong: {{wrongCount}}",
             "PHASE": "Phase",
-            "PHASE_WRITING": "{{ playersString }} are writing down $t(GAME.COMMON.HINTS)...",
-            "PHASE_WRITING_TWO_PLAYER": "{{ playersString }} is writing down $t(GAME.COMMON.HINTS)...",
-            "PHASE_COMPARING": "{{ roundHostName }} is checking the $t(GAME.COMMON.HINTS) for duplicate or invalid words...",
-            "PHASE_GUESSING": "{{ guesserName }} is trying to guess the word...",
+            "PHASE_WRITING": "{{ actionRequiredFrom }} is writing down a $t(GAME.COMMON.HINT)...",
+            "PHASE_WRITING_plural": "{{ actionRequiredFrom }} are writing down $t(GAME.COMMON.HINTS)...",
+            "PHASE_WRITING_TWO_PLAYER": "{{ actionRequiredFrom }} is writing down $t(GAME.COMMON.HINTS)...",
+            "PHASE_COMPARING": "{{ actionRequiredFrom }} is checking the $t(GAME.COMMON.HINTS) for duplicate or invalid words...",
+            "PHASE_GUESSING": "{{ actionRequiredFrom }} is trying to guess the word...",
             "PHASE_SOLUTION": "{{ guesserName }} was right!",
-            "PHASE_SOLUTION_WRONG": " {{ guesserName }} wrong! {{ roundHostName }} is deciding if it still counts..."
+            "PHASE_SOLUTION_WRONG": " {{ guesserName }} was wrong! {{ actionRequiredFrom }} is deciding if it still counts..."
         },
         "COMPARING": {
             "INFO": "Use the smiley buttons on the $t(GAME.COMMON.HINTS) to mark duplicate or invalid $t(GAME.COMMON.HINTS)",
