fix: add translations for ai integration

--- a/ui/public/locales/de/translation.json
+++ b/ui/public/locales/de/translation.json
@@ -220,5 +220,19 @@
         "CONNECTED": "verbunden",
         "DISCONNECTED": "keine Verbindung",
         "CONNECTING": "Verbindung wird aufgebaut..."
+    },
+    "AI": {
+        "ACTIVATION": {
+            "BUTTON": "AI aktivieren",
+            "PROMPT": "Gib deinen OpenAI API Key oder das geheime Passwort ein",
+            "SUCCESS": "AI erfolgreich aktiviert",
+            "RESET_BUTTON": "Neuen API Key setzen"
+        },
+        "ADD_PLAYER": "AI Mitspieler hinzufügen",
+        "PLAYGROUND": {
+            "GENERATE_WORD": "Generiere Wort",
+            "GENERATE_HINTS": "Generiere Hinweise für \"{{word}}\"",
+            "GENERATE_GUESS": "Generiere Rateversuch für {{hints}}"
+        }
     }
 }
