--- a/ui/public/locales/en/translation.json
+++ b/ui/public/locales/en/translation.json
@@ -24,6 +24,7 @@
         "GAME_NAME": "Game name",
         "LOAD_GAMES": "Reload games",
         "NEW_GAME": "New game",
+        "NEW_AI_GAME": "Start game with AI",
         "NEW_GAME_PERSONAL": "{{name}}'s game",
         "GAME_LIST": {
             "DONE": "My finished games",
