feat: add surprise me for words

--- a/ui/public/locales/de/translation.json
+++ b/ui/public/locales/de/translation.json
@@ -80,6 +80,7 @@
             "MY_WORDS": "Mein Begriff",
             "MY_WORDS_plural": "Meine Begriffe",
             "WAIT_MESSAGE": "Warten auf Mitspieler ... Sobald alle fertig sind, geht's los.",
+            "SURPRISE_ME": "Überrasch mich!",
             "WORD_ADDER": {
                 "BUTTON": "Begriff absenden",
                 "BUTTON_plural": "Begriffe absenden",
