--- a/ui/public/locales/de/translation.json
+++ b/ui/public/locales/de/translation.json
@@ -25,6 +25,7 @@
         "LOAD_GAMES": "Spiele aktualisieren",
         "NEW_GAME": "Neues Spiel",
         "NEW_AI_GAME": "Spiel mit KI starten",
+        "NEW_GUESSING_GAME": "Rate-Spiel starten",
         "NEW_GAME_PERSONAL": "{{name}}s Spiel",
         "GAME_LIST": {
             "DONE": "Meine beendeten Spiele",
