--- a/ui/public/locales/de/translation.json
+++ b/ui/public/locales/de/translation.json
@@ -25,7 +25,9 @@
         "LOAD_GAMES": "Spiele aktualisieren",
         "NEW_GAME": "Neues Spiel",
         "NEW_AI_GAME": "Spiel mit KI starten",
+        "AI_GAME": "Spiel mit KI",
         "NEW_GUESSING_GAME": "Rate-Spiel starten",
+        "GUESSING_GAME": "Rate-Spiel",
         "NEW_GAME_PERSONAL": "{{name}}s Spiel",
         "GAME_LIST": {
             "DONE": "Meine beendeten Spiele",
